--- a/app/views/application/events/events/tabs/_details.html.erb
+++ b/app/views/application/events/events/tabs/_details.html.erb
@@ -9,7 +9,7 @@
 
     <tr>
       <td class="title">Host</td>
-      <td><%= link_to @event.user.name, user_path(@event.user) %></td>
+      <td><%#= link_to @event.user.name, user_path(@event.user) %></td>
     </tr>
 
     <tr>
