--- a/app/views/application/tickets/tickets/_table.html.erb
+++ b/app/views/application/tickets/tickets/_table.html.erb
@@ -18,7 +18,7 @@
   <% @objects.each do |ticket| %>
     <tr>
       <td><%= ticket.event.media_item.present? ? image_tag(ticket.event.media_item.image.url(:small), class: 'profile_img') : image_tag(EventMediaItem.placeholder_url, class: 'profile_img') %></td>
-      <td><%= link_to ticket.event.user.name, user_path(ticket.event.user) %></td>
+      <td><%#= link_to ticket.event.user.name, user_path(ticket.event.user) %></td>
       <td><%= ticket.event.title %></td>
       <td><%= ticket.url %></td>
       <td><%= "#{ticket.updated_at.strftime(Api::Emails::DEFAULT_TIME_FORMAT)}" %></td>
